examples/good/1_int_and_bool.xp
true = True;

false = False;

shouldBeFalse = if True then True else False;


parses = if 2 + 2 then 1 else 0;

twenty_one = 21;

main = twenty_one >= 20;
