examples/bad/1_int.xp
parses = if 2 + 2 then 1 else 0;

main = parses;
